feat: implementação do domínio com JPA, relacionamentos e carga inicial